sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:15: error: 'while' expected but '}' found.
} 
^